[package]
name = "chess"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/hokkonsz/chess-rs"
license = "MIT"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.25", optional = true}
egui_extras = {version = "0.25", features = ["svg"], optional = true}
notan = { version = "0.11", optional = true}

[features]
default = ["notan"]
egui = ["dep:eframe", "dep:egui_extras"]
notan = ["dep:notan"]

[[example]]
name = "app_egui"
required-features = ["egui"]

[[example]]
name = "app_notan"
required-features = ["notan"]
